# trabalho-2-IA

./: CMakeLists.txt  README.md
include/: matrix.h  p_queue.h  util.h
src/: main.c  matrix.c  p_queue.c  util.c
